--- a/data/ja/video.yml
+++ b/data/ja/video.yml
@@ -7,9 +7,21 @@ items :
   content : レコーディング参加（ギター）
   url: https://www.youtube.com/embed/dUtCEd_BPFY
 
-- title : オリジナル曲
+- title : オリジナル曲（ディスコファンク）
+  content : Danshari Dance (断捨離ダンス)
+  url: https://www.youtube.com/embed/vnO-MJcGYSM
+
+- title : オリジナル曲（ポップ）
+  content : Shoganai (しょうがない)
+  url: https://www.youtube.com/embed/cAu-eMYGk58
+
+- title : オリジナル曲（ネオソウル）
   content : Komorebi(木洩れ日)
   url: https://www.youtube.com/embed/D2GQmPtbqTY
+
+- title : オリジナル曲（ネオソウル）
+  content : No Matter What, No Matter Where
+  url: https://www.youtube.com/embed/WWDOhnUylXg
 
 - title : ３分でわかるシティポップ
   content : 海外での人気の理由とは？
