--- a/data/en/video.yml
+++ b/data/en/video.yml
@@ -7,9 +7,21 @@ items :
   content : TV advert
   url: https://www.youtube.com/embed/dUtCEd_BPFY
 
-- title : My original song
+- title : My song (Disco Funk)
+  content : Danshari Dance (断捨離ダンス)
+  url: https://www.youtube.com/embed/vnO-MJcGYSM
+
+- title : My song (Pop)
+  content : Shoganai (しょうがない)
+  url: https://www.youtube.com/embed/cAu-eMYGk58
+
+- title : My song (Neo-Soul)
   content : Komorebi(木洩れ日)
   url: https://www.youtube.com/embed/D2GQmPtbqTY
+
+- title : My song (Neo-Soul)
+  content : No Matter What, No Matter Where
+  url: https://www.youtube.com/embed/WWDOhnUylXg
 
 - title : What Is City Pop?
   content : Explained in 3 mins
