--- a/data/en/video.yml
+++ b/data/en/video.yml
@@ -7,32 +7,32 @@ items :
   content : TV advert
   url: https://www.youtube.com/embed/dUtCEd_BPFY
 
-- title : My song (Disco Funk)
-  content : Danshari Dance (断捨離ダンス)
+- title : Danshari Dance (断捨離ダンス)
+  content : My song (Disco Funk)
   url: https://www.youtube.com/embed/vnO-MJcGYSM
 
-- title : My song (Pop)
-  content : Shoganai (しょうがない)
+- title : Shoganai (しょうがない)
+  content : My song (Pop)
   url: https://www.youtube.com/embed/cAu-eMYGk58
 
-- title : My song (Neo-Soul)
-  content : Komorebi(木洩れ日)
+- title : Komorebi(木洩れ日)
+  content : My song (Neo-Soul)
   url: https://www.youtube.com/embed/D2GQmPtbqTY
 
-- title : My song (Neo-Soul)
-  content : No Matter What, No Matter Where
+- title : No Matter What, No Matter Where
+  content : My song (Neo-Soul)
   url: https://www.youtube.com/embed/WWDOhnUylXg
 
 - title : What Is City Pop?
-  content : Explained in 3 mins
+  content : City Pop Information
   url: https://www.youtube.com/embed/DIzg4buVcYQ
 
 - title : Top 5 City Pop Guitar Solos
-  content : Guitar Solo Cover with TABs
+  content : Guitar Covers
   url: https://www.youtube.com/embed/6pdI7lJr1oY
 
 - title : Top 10 City Pop Artists
-  content : Must know
+  content : City Pop Information
   url: https://www.youtube.com/embed/hJVZCsGZSS4
 
 - title : Top 5 CIty Pop Chord Progressions
