--- a/data/ja/video.yml
+++ b/data/ja/video.yml
@@ -7,32 +7,32 @@ items :
   content : レコーディング参加（ギター）
   url: https://www.youtube.com/embed/dUtCEd_BPFY
 
-- title : オリジナル曲（ディスコファンク）
-  content : Danshari Dance (断捨離ダンス)
+- title : Danshari Dance (断捨離ダンス)
+  content : オリジナル曲（ディスコファンク）
   url: https://www.youtube.com/embed/vnO-MJcGYSM
 
-- title : オリジナル曲（ポップ）
-  content : Shoganai (しょうがない)
+- title : Shoganai (しょうがない)
+  content : オリジナル曲（ポップ）
   url: https://www.youtube.com/embed/cAu-eMYGk58
 
-- title : オリジナル曲（ネオソウル）
-  content : Komorebi(木洩れ日)
+- title : Komorebi(木洩れ日)
+  content : オリジナル曲（ネオソウル）
   url: https://www.youtube.com/embed/D2GQmPtbqTY
 
-- title : オリジナル曲（ネオソウル）
-  content : No Matter What, No Matter Where
+- title : No Matter What, No Matter Where
+  content : オリジナル曲 (ネオソウル)
   url: https://www.youtube.com/embed/WWDOhnUylXg
 
 - title : ３分でわかるシティポップ
-  content : 海外での人気の理由とは？
+  content : シティポップ情報
   url: https://www.youtube.com/embed/DIzg4buVcYQ
 
 - title : シティポップギターソロ５選
-  content : かっこいいギターソロを弾いてみた
+  content : ギターカバー
   url: https://www.youtube.com/embed/6pdI7lJr1oY
 
 - title : シティポップアーティスト１０選
-  content : 要チェック
+  content : シティポップ情報
   url: https://www.youtube.com/embed/hJVZCsGZSS4
 
 - title : シティポップ定番コード進行５選
