--- a/data/en/cd.yml
+++ b/data/en/cd.yml
@@ -1,6 +1,6 @@
 title : Not For Eternity
 description1 : 1st solo album (acoustic)
-description2 : Mamoru Satoh:All songs, Vocals & guitars, and painting of the album artwork
+description2 : Sora Satoh:All songs, Vocals & guitars, and painting of the album artwork
 date : Released on 27th Dec 2018
 bgImage : images/backgrounds/bg-1.jpg
 cdImage : images/cd/not_for_eternity.jpg
