--- a/data/en/video.yml
+++ b/data/en/video.yml
@@ -23,6 +23,10 @@ items :
   content : My song (Neo-Soul)
   url: https://www.youtube.com/embed/WWDOhnUylXg
 
+- title : I Ain't Gonna Face What This World Shows
+  content : My song (Classic-Soul)
+  url: https://www.youtube.com/embed/70g6szszFTk
+
 - title : What Is City Pop?
   content : City Pop Information
   url: https://www.youtube.com/embed/DIzg4buVcYQ
