--- a/data/ja/video.yml
+++ b/data/ja/video.yml
@@ -23,6 +23,10 @@ items :
   content : オリジナル曲 (ネオソウル)
   url: https://www.youtube.com/embed/WWDOhnUylXg
 
+- title : I Ain't Gonna Face What This World Shows
+  content : オリジナル曲 (クラシックソウル)
+  url: https://www.youtube.com/embed/70g6szszFTk
+
 - title : ３分でわかるシティポップ
   content : シティポップ情報
   url: https://www.youtube.com/embed/DIzg4buVcYQ
