label name update to Border-free Creations

--- a/config.toml
+++ b/config.toml
@@ -53,7 +53,7 @@ custom_css = []
     enable = true
     youtubeURL = "https://www.youtube.com/embed/MGxj1FZO4CU"
     bgImage = "images/slider/hero-area.jpg"
-    heading = "No Matter What, No Matter Where - Masa"
+    heading = "No Matter What, No Matter Where - Sora Satoh"
 #    content= "My original song"
 
     # footer
