--- a/data/ja/contact.yml
+++ b/data/ja/contact.yml
@@ -8,5 +8,5 @@ mapLatitude : 51.5223477
 mapLongitude: -0.1622023
 contactDetails :
   - icon : tf-ion-ios-email-outline
-    info : "iamsorasatoh@gmail.com"
+    info : "contact@sorasatoh.art"
     
